@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix issue where some text from original message was missing on reply (#1488340)
 - Fix parse errors in DDL files for MS SQL Server
 - Make contacts list sorting configurable for the admin/user
 - Revert SORT=DISPLAY support, removed by mistake (#1488327)
